# mora

./: .dockerignore  .gitconfig  .gitignore  CNAME  Cargo.toml  Dockerfile  Makefile.toml  README.md  dev.docker-compose.yml  docker-compose.yml  dockerfile  env.sample  otel-collector-config.yaml  prometheus.yml  watch_api.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: elixir.yml  rust.yml
benches/: priority_queue.rs
docs/: api.md
docs/software/architecture/: main.drawio
grafana/dashboards/: mora-server-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
k6/: api.js
kubernetes/: mora.yml
load-tests/: api-health-test.js
mora-api/: Cargo.toml
mora-api/mora-proto/: Cargo.toml
mora-api/src/: connections.rs  grpc.rs  health.rs  lib.rs  middlewares.rs  queue.rs  routes.rs
mora-api/src/grpc/: channels.rs  connections.rs  events.rs  health.rs  queues.rs
mora-api/src/middlewares/: connections.rs
mora-api/src/model/: queue.rs
mora-api/src/routes/: channels.rs  connections.rs  events.rs  health.rs  mod.rs  queue.rs  queues.rs
mora-api/src/services/: health.rs  queues.rs
mora-channel/: Cargo.toml
mora-channel/src/: lib.rs
mora-cli/: Cargo.toml
mora-cli/src/: app.rs  main.rs  selectable.rs
mora-cli/src/widgets/: channel_panel.rs  connection_panel.rs  mod.rs  queue_panel.rs  server_status.rs
mora-client/: Cargo.toml
mora-client/src/: lib.rs
mora-core/: Cargo.toml
mora-core/src/: clock.rs  context.rs  entities.rs  lib.rs  models.rs  result.rs
mora-core/src/entities/: connections_info.rs
mora-core/src/models/: channels.rs  connections.rs  events.rs  health.rs  queues.rs
mora-core/src/traits/: storage.rs
mora-proto/: Cargo.toml  build.rs
mora-proto/src/: lib.rs
mora-queue/: Cargo.toml
mora-queue/src/: channel_manager.rs  dumb_priority_queue.rs  lib.rs  naive_priority_queue.rs  pool.rs  priority_queue.rs
mora-queue/src/priority_queue/: dumb.rs  mod.rs  naive.rs
mora-queue/src/temporal_queue/: mod.rs
mora-server/: Cargo.toml
mora-server/src/: config.rs  lib.rs  main.rs  otel.rs
mora-storage/: Cargo.toml  TEST_COVERAGE.md
mora-storage/src/: lib.rs  wal_file_storage.rs
mora-storage/tests/: wal_tests.rs
protos/mora/channels/v1/: channels.proto
protos/mora/connections/v1/: connections.proto
protos/mora/events/v1/: events.proto
protos/mora/health/v1/: health.proto
protos/mora/queues/v1/: queues.proto
src/: .db  .gitignore  .mix_tasks  README.md  main.rs  mix.exs  ttb_last_config
src/benchmarks/: insert_event.exs
src/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
src/lib/: mora.ex  moradb.ex
src/lib/mora/: application.ex
src/lib/mora/api/: api.ex
src/lib/mora/api/routers/: events_router.ex  status_router.ex
src/lib/mora/api/socket_handlers/: events_socket_handler.ex
src/lib/mora/common_behaviours/: pg_item.ex
src/lib/mora/database/: database.ex  database_mnesia.ex
src/lib/mora/dispatchers/: dispatcher.ex  websocket.ex
src/lib/mora/domain/events/api/: api.ex
src/lib/mora/domain/events/api/routers/: events_router.ex
src/lib/mora/domain/events/api/socket_handlers/: events_socket_handler.ex
src/lib/mora/domain/events/database/: database.ex  database_mnesia.ex
src/lib/mora/domain/events/dispatchers/: dispatcher.ex  websocket.ex
src/lib/mora/domain/events/model/: event.ex
src/lib/mora/domain/events/temporal_queue/: priority.ex  priority_queue.ex  temporal_queue.ex
src/lib/mora/model/: event.ex
src/lib/mora/service/: events.ex  events_behaviour.ex
src/lib/mora/temporal_queue/: manager.ex  manager_behaviour.ex  priority_queue.ex  supervisor.ex  temporal_queue.ex  temporal_queue_behaviour.ex  temporal_queue_server.ex  temporal_queue_supervisor.ex
src/lib/moradb/: application.ex
src/lib/moradb/api/: api.ex
src/lib/moradb/api/routers/: schedule_router.ex
src/lib/moradb/domain/events/api/: api.ex
src/lib/moradb/domain/events/api/routers/: events_router.ex
src/lib/moradb/domain/events/api/socket_handlers/: events_socket_handler.ex
src/lib/moradb/domain/events/database/: database.ex  database_mnesia.ex  local.ex
src/lib/moradb/domain/events/dispatchers/: dispatcher.ex  websocket.ex
src/lib/moradb/domain/events/model/: event.ex
src/lib/moradb/domain/events/temporal_queue/: local.ex  priority.ex  temporal_queue.ex
src/test/: moradb_test.exs  test_helper.exs
src/test/api/: api_test.exs
src/test/api/routers/: events_test.exs
src/test/database/: database_test.exs
src/test/domain/events/database/: database_test.exs
src/test/domain/events/model/: event_generator.exs
src/test/domain/events/temporal_queue/: priority_queue_test.exs
src/test/service/: events_test.exs
src/test/support/: event_generator.ex  event_generator.exs
src/test/temporal_queue/: priority_queue_test.exs  temporal_queue_server_test.exs  temporal_queue_test.exs
test-client/: event_generator.js  package-lock.json  ws.js
test/client/: event_generator.js  package-lock.json  package.json  ws.js
test/load/: script.js
tests/api/: health.js
