
[workspace]
resolver = "2"
members = [
    "mora-core",
    "mora-queue",
    "mora-api",
    "mora-server",
    "mora-client",
    "mora-cli",
]

[workspace.dependencies]
mora-core = { path = "./mora-core" }
mora-channel = { path = "./mora-channel" }
mora-queue = { path = "./mora-queue" }
mora-api = { path = "./mora-api" }
mora-server = { path = "./mora-server" }
mora-client = { path = "./mora-client" }
mora-cli = { path = "./mora-cli" }

config = { version = "0.15.11" }
log = { version = "0.4", features = ["kv"] }
axum = { version = "0.8" }
axum-macros = { version = "0.5" }
opentelemetry = "0.30"
opentelemetry-appender-log = "0.30"
opentelemetry-otlp = { version = "0.30", features = [
    "grpc-tonic",
    "trace",
    "metrics",
    "logs",
] }
opentelemetry-resource-detectors = "0.9"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
regex = { version = "1.11.1" }
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
tokio = { version = "1.46.1", features = ["full"] }
thiserror = { version = "2.0.12" }
uuid = { version = "1.17.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
