[package]
name = "mora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mora-core = { workspace = true }
mora-channel = { workspace = true }
mora-queue = { workspace = true }

axum = { workspace = true }
axum-macros = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
