[package]
name = "mora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mora-core = { workspace = true }
mora-queue = { workspace = true }
mora-storage = { workspace = true }

chrono = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
opentelemetry = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
