[package]
name = "mora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mora-core = { workspace = true }
mora-queue = { workspace = true }
mora-storage = { workspace = true }
mora-proto = { workspace = true }

chrono = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
