[package]
name = "mora-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mora-core = { workspace = true }
mora-client = { workspace = true }

chrono = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
ratatui = { workspace = true, features = ["all-widgets"] }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream.workspace = true
