[package]
name = "mora-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }
