[package]
name = "mora-server"
version = "0.1.0"
edition = "2021"
default-run = "mora-server"

[dependencies]
config = "0.15.16"
log = { workspace = true }
mora-api = { workspace = true }
mora-core = { workspace = true }
mora-queue = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-resource-detectors = { workspace = true }
opentelemetry-appender-log = { workspace = true }
opentelemetry-stdout = { workspace = true }
serde = { workspace = true }
simple_logger = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
